# Luajit-Luarocks

./: CMakeLists.txt  README.md
luajit-2.0/: CMakeLists.txt
luajit-2.1/: CMakeLists.txt
luarocks/: CMakeLists.txt
luarocks.old/src/luarocks/: config.lua.win.in
rocks/: cutorch-scm-1.rockspec  fs-0.3-0.rockspec  image-1.1.alpha-0.rockspec  manifest  manifest-5.1  manifest-5.2  manifest-5.3  sundown-scm-1.rockspec  sys-1.1-1.rockspec  torch-scm-1.rockspec  torch64-scm-1.rockspec  torchx-scm-1.rockspec
