CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

PROJECT(luajit-luarocks-torch7)

# We want release compilation by default
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel." FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

OPTION(WITH_LUAJIT21 "Use LuaJIT 2.1 instead of LuaJIT 2.0" ON) 
SET(WITH_LUAROCKS ON) # "Install Luarocks" 

IF(WITH_LUAJIT21)
  SET(LUA_EXE_NAME luajit)
  SET(LUA_VERSION 5.1)
  ADD_SUBDIRECTORY(LuaJIT-2.1)
ELSE()
  SET(LUA_EXE_NAME luajit)
  SET(LUA_VERSION 5.1)
  ADD_SUBDIRECTORY(LuaJIT-2.0)
ENDIF()

IF(WITH_LUAROCKS)
  ADD_SUBDIRECTORY(luarocks)
ENDIF(WITH_LUAROCKS)
